# shamboflow

./: .gitignore  CHANGELOG.md  README.md  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
docs/: all-documents.html  classIndex.html  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  objects.inv  searchindex.json  shamboflow.callbacks.EarlyStopping.html  shamboflow.callbacks.ModelCheckpoint.html  shamboflow.callbacks.ReduceLROnPlateau.html  shamboflow.callbacks.html  shamboflow.engine.activations.html  shamboflow.engine.base_callback.BaseCallback.html  shamboflow.engine.base_callback.html  shamboflow.engine.base_layers.BaseLayer.html  shamboflow.engine.base_layers.html  shamboflow.engine.base_models.BaseModel.html  shamboflow.engine.base_models.html  shamboflow.engine.d_activations.html  shamboflow.engine.d_losses.html  shamboflow.engine.html  shamboflow.engine.losses.html  shamboflow.layers.Dense.html  shamboflow.layers.html  shamboflow.models.Sequential.html  shamboflow.models.html  undoccedSummary.html
shamboflow/: __init__.py  callbacks.py  layers.py  models.py
shamboflow/engine/: activations.py  base_layers.py  base_models.py  d_activations.py  d_losses.py  losses.py
src/engine/: activations.py
src/shamboflow/: __init__.py  callbacks.py  layers.py  models.py
src/shamboflow/engine/: activations.py  base_models.py  d_activations.py  d_losses.py  losses.py
tests/: test_activation.py
