[metadata]
name = shamboflow
version = 0.0.1
author = ShambaC
author_email = shambachowdhury2@gmail.com
description = A fierce Tensorflow competitor
long_description = file: README.md, LICENSE
url = https://github.com/ShambaC/shamboflow
project_urls =
    Bug Tracker = https://github.com/ShambaC/shamboflow/issues
    repository = https://github.com/ShambaC/shamboflow
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src